--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,200;0,400;0,600;0,700;0,900;1,400;1,500;1,900&display=swap");
 body {
   font-family: "Noto Sans", sans-serif;
+  background-color: #fff;
 }
 a:active,
 a:hover {
@@ -52,7 +53,6 @@ a {
 div.scrolling-limit {
   width: 100%;
   height: 25px;
-
   overflow: hidden;
   white-space: nowrap;
 }
@@ -189,7 +189,7 @@ sup {
   font-size: 0.5rem;
 }
 .mybrdr {
-  border-right: 1px solid var(--clr-gry-color);
+  border-right: 1px solid #cecac9;
 }
 footer {
   background-image: url(images/footer.jpg);
@@ -216,9 +216,19 @@ footer {
 .owl-nav button {
   border: none;
   background: none;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 
 .owl-nav a:hover {
   color: #c23231;
+}
+
+span.prev {
+  background: url(images/left_arrow.png) no-repeat 0 50%;
+  padding-left: 13px;
+}
+
+span.next {
+  background: url(images/right_arrow.png) no-repeat 100% 60%;
+  padding-right: 13px;
 }
